force-app/main/default/objects/Source__c/Source__c.object-meta.xml
<CustomObject>
    <description>Source is the way we track information about how the customers came to EF</description>
    <label>Source</label>
    <nameField>
        <label>Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>