force-app/main/default/objects/Source__c/fields/AvailableforExcelImport__c.field-meta.xml
<CustomField>
    <fullName>AvailableforExcelImport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True these sources will be available in the excel template for manual import</description>
    <label>AvailableforExcelImport</label>
    <type>Checkbox</type>
</CustomField>