force-app/main/default/objects/Source__c/fields/AvailableforManualEntry__c.field-meta.xml
<CustomField>
    <fullName>AvailableforManualEntry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true these sources will be available for Manual Entry</description>
    <label>AvailableforManualEntry</label>
    <type>Checkbox</type>
</CustomField>