force-app/main/default/objects/Source__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True then the source is active</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>