force-app/main/default/objects/Source__c/fields/IsGlobal__c.field-meta.xml
<CustomField>
    <fullName>IsGlobal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true then the Source is same across all the markets</description>
    <label>IsGlobal</label>
    <type>Checkbox</type>
</CustomField>