force-app/main/default/objects/Source__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Displays the Market to which the Source belongs; ALL in case of global Source</description>
    <label>Market</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>