force-app/main/default/objects/Source__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Displays the name of the Code</description>
    <label>Source</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>