force-app/main/default/objects/Source__c/fields/SourceUniqueKey__c.field-meta.xml
<CustomField>
    <fullName>SourceUniqueKey__c</fullName>
    <formula>Market__c &amp;"-"&amp;  Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SourceUniqueKey</label>
    <type>Text</type>
</CustomField>